--- a/sources/sections/03-norm-refs.adoc
+++ b/sources/sections/03-norm-refs.adoc
@@ -5,13 +5,13 @@
 // [.boilerplate]
 // === {blank}
 
-While this Policy references UML, SQL and XML, and their technical specifications,
-no requirements are derived from these documents. While this Policy
+While the ModSpec references UML, SQL and XML, and their technical specifications,
+no requirements are derived from these documents. While this document
 may be applied to extensions of those standards, conformance to them is the purview
-of those standards, not this Policy.
+of those standards, not the ModSpec.
 
-The following are normative references for this Policy document in the sense that they
-supplied definitions used in this Policy.
+The following are normative references for this document in the sense that they
+supplied definitions used in this document.
 
 * [[[iso10000-1,ISO/IEC 10000-1]]]
 
