--- a/sources/sections/05-conventions.adoc
+++ b/sources/sections/05-conventions.adoc
@@ -27,17 +27,16 @@ OCL:: Object Constraint Language (part of UML)
 [[cls-5-3]]
 === Finding requirements and recommendations
 
-Each normative statement in this Policy is stated in one and only one place
-in a #*bold font*# and has an unique label, such as Req001 or Rec001. A requirement or recommendation may be repeated for clarification. The statement with the unique label is
-considered the official statement of the normative requirement or recommendation. In
-this sense, all requirements in this Policy are listed in the Table of Requirements
-at the beginning of this document.
+Each normative statement in the ModSpec is stated in one and only one place,
+in a standard format, and has an unique label, such as REQ001, REC001, or PER001. A requirement, recommendation, or permission may be repeated for clarification. 
+The statement with the unique label is
+considered the official statement of the normative requirement or recommendation. 
 
-In this Policy, all requirements are associated with tests specified in the abstract test suite
+In this document, all requirements are associated with tests specified in the abstract test suite
 in <<annex-A>>. The reference to the requirement in the test case is done by a
 requirements label (in the form "*#Req &#x23;#*", where "&#x23;" is a number) associated to
-the "*#bold font#*" *#home#* of the statement described above. Recommendations are
-not tested although they still use a *#bold font#*.
+the *#home#* of the statement described above. Recommendations are
+not tested although they still are documented using a standard template and have unique identifiers.
 
 Requirements classes are separated into their own clauses and named, and specified
 according to inheritance (direct dependencies). The Conformance test classes in the
